--- a/assets/stylesheets.css
+++ b/assets/stylesheets.css
@@ -20,7 +20,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background-color: #333;
+	background-color: #2196f3;
 	color: #fff;
 	font-size: 2em;
 }
